# Trading

./: .gitignore  AI_AGENT.md  ARCHITECTURE.md  BRAINSTORMING.md  CONTRIBUTING.md  DATA_SOURCES.md  INSTALL.md  QUICKSTART.md  README.md  RISK_MANAGEMENT.md  STRATEGIES.md  pyproject.toml  quant-trader_1.skill  requirements.txt  setup.py
quant_trader/: __init__.py  backtest.py  indicators.py  portfolio.py  risk.py
quant_trader/agents/: __init__.py  rl_agent.py  training.py
quant_trader/data/: __init__.py  collectors.py  processors.py
quant_trader/strategies/: __init__.py  iron_condor.py  vertical_spreads.py
quant_trader/utils/: __init__.py  greeks.py  helpers.py
